--- a/configpinjameteor.json
+++ b/configpinjameteor.json
@@ -33,9 +33,9 @@
       "ad_manager_interstitial_unit_id": "/6499/example/interstitial",
       "ad_manager_native_unit_id": "/6499/example/native",
       "ad_manager_app_open_unit_id": "/6499/example/app-open",
-      "fan_banner_unit_id": "IMG_16_9_APP_INSTALL#360357416250749_637079418578546",
-      "fan_interstitial_unit_id": "IMG_16_9_APP_INSTALL#360357416250749_637079568578531",
-      "fan_native_unit_id": "IMG_16_9_APP_INSTALL#360357416250749_637079675245187",
+      "fan_banner_unit_id": "360357416250749_637079418578546",
+      "fan_interstitial_unit_id": "360357416250749_637079568578531",
+      "fan_native_unit_id": "360357416250749_637079675245187",
       "startapp_app_id": "0",
       "unity_game_id": "157b7aff1",
       "unity_banner_placement_id": "banner",
@@ -49,7 +49,7 @@
       "ironsource_app_key": "1a6912d95",
       "ironsource_banner_id": "DefaultBanner",
       "ironsource_interstitial_id": "DefaultInterstitial",
-      "interstitial_ad_interval": 2,
+      "interstitial_ad_interval": 4,
       "native_ad_index": 1,
       "native_ad_interval": 5,
       "native_ad_style": "medium",
